--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport"> 
         <title>BAN CÔNG NGHỆ</title>
-        <link rel="stylesheet" href="OL.css">
+        <link rel="stylesheet" href="index.css">
 
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -54,7 +54,7 @@
                             </li>
     
                             <li class="nav-item">
-                                <div class="account"><a id="signin_icon" href="https://project-iuh-signin.vercel.app/"><i class="fa-sharp-duotone fa-solid fa-user"
+                                <div class="account"><a id="signin_icon" href="https://project-iuh-signin-svl5.vercel.app/"><i class="fa-sharp-duotone fa-solid fa-user"
                                         style="height: 10px; margin-left: 16px; padding: 12px;"></i>
                                     </a>
                                 </div>
@@ -67,15 +67,16 @@
         </header>
 
         <!-- Phần 2  -->
+
         <div class="container2">
             <div id="tieude_container2" class="item_container2">
-                <h1>WELCOME</h1>
-                <P>ORIENTATION LABORATORY</P>
+                <h1 class="ol" style="font-size: 40px;">WELCOME!</h1>
+                <P class="ol">ORIENTATION LABORATORY</P>
                 <div class="button__tieude_container2">
-                    <a target="_blank" id="aboutus" href="Portfolio.pdf" ><h3 class="chu__button__tieude_container2">About us</h3></a>
+                    <a target="_blank" id="aboutus" href="Portfolio.pdf" ><h3 class="chu__button__tieude_container2"> About Us </h3></a>
                 </div>
             </div>
-            <div id="background_container2" class="item_container2">
+            <div id="background_container2" class="item_container2_img">
                 <img src="image_trangchu/word-image-294.jpeg" width="100%" height="100%">
             </div>
    </div>
@@ -87,7 +88,7 @@
                 <a  href="https://test1-status-fix.vercel.app/"> <img src="image_trangchu/image1.jpg" width="810px" height="500px"> </a>
                 <h2>Tin mới nhất về việc sửa chữa ứng dụng cho tân sinh viên</h2>
                 <p>Sau khi  cân nhắc kỹ lưỡng, ban công nghệ sẽ mở ra hoạt động sửa chữa thiết bị cho tân sinh viên tại hội trường
-                    <a href="https://test1-status-fix.vercel.app/">xem thêm</a>
+                    <a href="https://test1-status-fix.vercel.app/"><button type="button" class="btn btn-outline-primary">Xem Thêm</button></a>
                 </p>
             </div>
             <div class="khungphai_container3">
@@ -95,14 +96,14 @@
                     <a href="https://test1-status-fix.vercel.app/"><img src="image_trangchu/image2.jpg" width="100%" height="200px"></a>
                     <h4>Tỉ lệ áp dụng công nghệ của doanh nghiệp Việt cao</h4>
                     <P>Báo cáo ứng dụng  công nghệ trong kinh doanh 2024 khu vực Châu Á - Thái Bình Dương cho thấy so với khu vực ...
-                        <a href="https://test1-status-fix.vercel.app/">xem thêm</a>
+                        <a href="https://test1-status-fix.vercel.app/"><button type="button" class="btn btn-outline-primary">Xem Thêm</button></a>
                     </P>
                 </div>
                 <div id="item2__khungphai_container3" class="item__khungphai_container3">
                     <a href="https://test1-status-fix.vercel.app/"><img src="image_trangchu/image3.jpg" width="100%" height="200px"></a>
                     <h4>Công nghệ cảnh báo thiên tai: Chỉ sớm thôi là chưa đủ</h4>
                     <p>TTCT - Phát hiện thiên tai là chưa đủ, chúng ra còn phải đảm bảo rằng cảnh báo được gửi đến đúng người
-                        <a href="https://test1-status-fix.vercel.app/">xem thêm</a>
+                        <a href="https://test1-status-fix.vercel.app/"><button type="button" class="btn btn-outline-primary">Xem Thêm</button></a>
                     </p>
                 </div>
             </div>
@@ -116,21 +117,21 @@
                 <a href="https://test1-status-fix.vercel.app/"><img src="image_trangchu/image4.jpg" width="380px" height="200px"></a>
                 <h4>Công nghệ cảnh báo thiên tai: Chỉ sớm thôi là chưa đủ</h4>
                 <p>TTCT - Phát hiện thiên tai là chưa đủ, chúng ra còn phải đảm bảo rằng cảnh báo được gửi đến đúng người
-                    <a href="https://test1-status-fix.vercel.app/">xem thêm</a>
+                    <a href="https://test1-status-fix.vercel.app/"><button type="button" class="btn btn-outline-primary">Xem Thêm</button></a>
                 </p>
             </div>
             <div id="box2_container4" class="box_container4">
                 <a href="https://test1-status-fix.vercel.app/"> <img src="image_trangchu/image5.jpg" width="380px" height="200px"> </a>
                 <h4>Tỉ lệ áp dụng công nghệ của doanh nghiệp Việt cao</h4>
                 <P>Báo cáo ứng dụng  công nghệ trong kinh doanh 2024 khu vực Châu Á - Thái Bình Dương cho thấy so với khu vực ...
-                    <a href="https://test1-status-fix.vercel.app/">xem thêm</a>
+                    <a href="https://test1-status-fix.vercel.app/"><button type="button" class="btn btn-outline-primary">Xem Thêm</button></a>
                 </P>
             </div>
             <div id="box3_container4" class="box_container4">
                 <a  href="https://test1-status-fix.vercel.app/"> <img src="image_trangchu/image6.jpg" width="380px" height="200px"></a>
                 <h4>Công nghệ cảnh báo thiên tai: Chỉ sớm thôi là chưa đủ</h4>
                 <p>TTCT - Phát hiện thiên tai là chưa đủ, chúng ra còn phải đảm bảo rằng cảnh báo được gửi đến đúng người
-                    <a href="https://test1-status-fix.vercel.app/">xem thêm</a>
+                    <a href="https://test1-status-fix.vercel.app/"><button type="button" class="btn btn-outline-primary">Xem Thêm</button></a>
                 </p>
             </div>
        </div>
@@ -141,12 +142,12 @@
             <div id="box1_container5" class="box_container5">
                 <a href="https://test2-act1-fix.vercel.app/"><img src="image_trangchu/ROW.png" width="600px" height="300px"></a>
                 <h4>Ngày 13/10/2024: Diễn ra Race Of Warrior ( ROW )</h4>
-                <a href="https://test2-act1-fix.vercel.app/">xem thêm</a>
+                <a href="https://test2-act1-fix.vercel.app/"><button type="button" class="btn btn-outline-primary">Xem Thêm</button></a>
             </div>
             <div id="box2_container5" class="box_container5">
-                <a href="https://project-iuh-activity2.vercel.app/#"><img src="image_trangchu/image8.jpg" width="600px" height="300px"></a> 
+                <a href="https://test3-act2-fix.vercel.app/"><img src="image_trangchu/image8.jpg" width="600px" height="300px"></a> 
                 <h4>Ngày 17/10/2024: Thuyết trình về sản phẩm</h4>
-                <a href="https://project-iuh-activity2.vercel.app/#">xem thêm</a>
+                <a href="https://test3-act2-fix.vercel.app/"><button type="button" class="btn btn-outline-primary">Xem Thêm</button></a>
             </div>
            
         </div>
@@ -157,12 +158,12 @@
             <div id="item1_container6" class="item_container6">
                 <a href="https://test4-notice1.vercel.app/"><img src="image_trangchu/image11.jpg" width="600px" height="300px"></a>
                 <h4>Tuyển cộng tác viên Ban Công Nghệ</h4>
-                <a href="https://test4-notice1.vercel.app/">xem thêm</a>
+                <a href="https://test4-notice1.vercel.app/"><button type="button" class="btn btn-outline-primary">Xem Thêm</button></a>
             </div>
             <div id="item2_container6" class="item_container6">
                 <a href="https://test3-act2-fix.vercel.app/"> <img src="image_trangchu/image12.jpg" width="600px" height="300px"> </a>
                 <h4>Tổ chức học nhóm tại thư viện trường </h4>
-                <a href="https://test3-act2-fix.vercel.app/">xem thêm</a>
+                <a href="https://test3-act2-fix.vercel.app/"><button type="button" class="btn btn-outline-primary">Xem Thêm</button></a>
             </div>
         </div>
 
@@ -178,7 +179,7 @@
                 </p>
             </div>
             <div class="khungphai_container7">
-                <img class="image__khungphai_container7" src="image_trangchu/image_gioithieu.jpg" width="500px" height="430px">
+                <img class="image__khungphai_container7" src="image_trangchu/bancongnghe.jpg" width="500px" height="430px">
             </div>
         </div>
 
